# resume-evaluator

./: AGENTS.md  CONTEXT.md  README.md  boost.json  composer.json  package-lock.json  package.json  pnpm-lock.yaml  skills-lock.json
app/Enums/: AssigneeScope.php  EvaluationStatus.php  GlobalRole.php  JobListingSource.php  ModuleJobListingScope.php  ModuleStatus.php  RoleInModule.php
app/Jobs/: EvaluateJob.php
app/Models/: Assignment.php  AssignmentAllowedJobListings.php  AssignmentAssignees.php  AssignmentUserOverrides.php  Evaluation.php  Group.php  GroupMembership.php  JobListing.php  Module.php  ModuleMembership.php  Resume.php  User.php  Workspace.php
app/Policies/: AssignmentPolicy.php  JobListingPolicy.php  ModulePolicy.php  UserPolicy.php  WorkspacePolicy.php
app/Providers/: AppServiceProvider.php
app/eval-service/: BACKLOG.md  ai_phrases.py  enrichment_analyze.py  keyword_match.py  llm.py  main.py  parser.py  pyproject.toml  review_warnings.py
app/eval-service/prompts/: __init__.py  enrichment.py  extract_keywords.py  templates.py
app/eval-service/schemas/: __init__.py  enrichment.py  models.py
config/: services.php
database/factories/: AssignmentAllowedJobListingsFactory.php  AssignmentAssigneesFactory.php  AssignmentFactory.php  AssignmentUserOverridesFactory.php  EvaluationFactory.php  GroupFactory.php  GroupMembershipFactory.php  JobListingFactory.php  ModuleFactory.php  ModuleMembershipFactory.php  ResumeFactory.php  UserFactory.php  WorkspaceFactory.php
database/migrations/: 0001_01_01_000000_create_users_table.php  (+14 more)
routes/: web.php
(+71 files in other folders)
