[project]
name = "eval-service"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.138.1",
    "litellm>=1.90.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "uvicorn>=0.49.0",
    "markitdown[pdf,docx]>=0.1.6"
]
